put the multiple search boxes in different tabs, rather than columns

--- a/src/templates/recipes.html
+++ b/src/templates/recipes.html
@@ -100,6 +100,9 @@
 	<!-- d3 is used both in the collection API for AJAX calls and (of course) in the visualisation components -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 
+	<script src="/static/bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="/static/bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
+
 	<!-- Config & collection API-->
 	<script src="/static/js/config.js"></script>
 	<script src="/static/js/api/collectionAPI.js"></script>
