added a basic collection selector component (also handled by the Recipe.js)

--- a/src/templates/recipes.html
+++ b/src/templates/recipes.html
@@ -91,6 +91,7 @@
 		</div>
 		<div class="row">
 
+			<!-- instead of listing the one recipe, make sure to list a bunch of recipes-->
 			<div id="recipe"></div>
 
 		</div>
@@ -113,6 +114,7 @@
 	<script type="text/javascript" src="static/bower_components/searchkit/release/bundle.js"></script>
 
 	<!-- CLARIAH components -->
+	<script type="text/javascript" src="static/js/ui_components/search/CollectionSelector.js"></script>
 	<script type="text/javascript" src="static/js/ui_components/visualisations/LineChart.js"></script>
 	<script type="text/javascript" src="static/js/ui_components/search/FacetSearchComponent.js"></script>
 
