fixed that stupid details modal

--- a/src/templates/recipes.html
+++ b/src/templates/recipes.html
@@ -116,6 +116,7 @@
 	<!-- CLARIAH components -->
 	<script type="text/javascript" src="static/js/ui_components/search/CollectionSelector.js"></script>
 	<script type="text/javascript" src="static/js/ui_components/visualisations/LineChart.js"></script>
+	<script type="text/javascript" src="static/js/ui_components/search/ItemDetailsModal.js"></script>
 	<script type="text/javascript" src="static/js/ui_components/search/FacetSearchComponent.js"></script>
 
 	<!-- collection mappings for rendering SearchKit Hits -->
