--- a/src/static/sass/main.scss
+++ b/src/static/sass/main.scss
@@ -3,3 +3,4 @@
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "_variables.scss";
 @import "_home.scss";
+@import "_searchkit.scss";
