--- a/src/templates/nav.html
+++ b/src/templates/nav.html
@@ -14,7 +14,7 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
 			<ul class="nav navbar-nav">
-				{% if page=='search'%}
+				{% if page=='collections'%}
 				<li class="active"><a href="/collections">Collections <span class="sr-only">(current)</span></a></li>
 				<li><a href="/search">Search</a></li>
 				<li><a href="/apis">APIs</a></li>
