--- a/src/templates/recipe.html
+++ b/src/templates/recipe.html
@@ -1,35 +1,40 @@
 <head>
-	<title>L A B O - Search Catalogue</title>
+	<title>L A B O - Packaged Recipes</title>
 	<link rel="stylesheet" href="/static/css/main.css">
 	<link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/searchkit/0.8.3/theme.css">
 	<link href="/static/css/font-awesome.min.css" rel="stylesheet">
-
 </head>
+
+
+
+
 <body>
 
-{% with page='search' %}
+{% with page='recipes' %}
 {% include 'nav.html' %}
 {% endwith %}
 
 	<div class="container">
 
-		<div class="row" style="height: 50px; ">
+		<div class="row" style="height:50px;">
 
 			<div class="col-md-12">
 				<div role="tabpanel" class="tab-pane collection-tab" id="links">
 
 					<div class="row text-center">
 						<div class="dashboard-header">
-							<h3>Search the catalogue</h3>
+							<h3>Recipe: AVResearcherXL</h3>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-12">
-				<div id="app"></div>
-			</div>
+
+			<!-- instead of listing the one recipe, make sure to list a bunch of recipes-->
+			<div id="app" />
+
+
 		</div>
 	</div>
 
@@ -37,6 +42,6 @@
 
 	<script src="/static/js/config.js" type="text/javascript"></script>
 	<script src="/static/public/bundle.js" type="text/javascript"></script>
-	<script src="/static/js/recipes/search-recipe.js" type="text/javascript"></script>
-</body>
+	<script src="/static/js/recipes/avresearcherxl-recipe.js" type="text/javascript"></script>
 
+</body>
