moved package.json and webpack.config.js to /src/static removed bower.json, cleared apis.html

--- a/src/static/sass/_bootstrap-overrides.scss
+++ b/src/static/sass/_bootstrap-overrides.scss
@@ -4,6 +4,6 @@ $navbar-border-radius : 0px;
 
 /* This is needed for the glyphicons to work */
 
-$icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/" !default;
+$icon-font-path: "../../../node_modules/bootstrap-sass/assets/fonts/bootstrap/" !default;
 
 /* Further overrides */
