--- a/src/templates/semweb.html
+++ b/src/templates/semweb.html
@@ -6,8 +6,6 @@
 <head>
 	<title>L A B O - Semantic Search</title>
 	<link rel="stylesheet" href="/static/css/main.css">
-	<!-- <link rel="stylesheet" type="text/css" href="/static/bower_components/datatables/media/css/jquery.dataTables.css"> -->
-	<!--<link rel="stylesheet" type="text/css" href="/static/bower_components/datatables/media/css/dataTables.bootstrap.min.css">-->
 	<link href="/static/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
@@ -20,29 +18,9 @@
 
 <div class="container">
 
-	<div class="row">
-
-		<div class="col-md-12">
-			<div role="tabpanel" class="tab-pane collection-tab" id="links">
-
-				<div class="row text-center">
-					<div class="dashboard-header">
-						<img src="/static/images/small-curl.png">
-						<h3>Semantic search</h3>
-						<img src="/static/images/small-curl.png">
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	TODO this page can be built once the CLARIAH component library has functionalities for browsing linked data
 </div>
 
 </body>
-
-<script src="/static/bower_components/jquery/dist/jquery.min.js"></script>
-<!--<script type="text/javascript" charset="utf8" src="/static/bower_components/datatables/media/js/jquery.dataTables.js"></script>-->
-<script src="/static/bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
-<!--<script src="/static/bower_components/datatables/media/js/dataTables.bootstrap.min.js"></script>-->
-<script src="/static/js/labo.js"></script>
 
 </html>
