--- a/src/static/sass/main.scss
+++ b/src/static/sass/main.scss
@@ -1,6 +1,6 @@
 @import "compass/css3";
 @import "_bootstrap-overrides.scss";
-@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "_variables.scss";
 @import "_home.scss";
 @import "_searchkit.scss";
