now recipes are json files. The recipe page now shows the two recipes. The search page has been removed

--- a/src/static/sass/_home.scss
+++ b/src/static/sass/_home.scss
@@ -8,7 +8,6 @@
 body {
 	margin:auto;
 	background-color:white;
-
 	line-height:200%;
 	font-family: "Roboto";
 }
@@ -19,6 +18,10 @@ h1, h2, h3 {
 
 h4, h5, h6 {
 	font-family: "Lato";
+}
+
+.bengfont {
+    font-family: 'akzidenz-grotesk-condensed', bebas_neueregular, Helvetica Neue, Arial, sans-serif;
 }
 
 .navbar-brand {
@@ -95,4 +98,34 @@ h4, h5, h6 {
 
 .interactive {
 	cursor:pointer;
+}
+
+.card {
+	padding: 0;
+	height: 380px;
+	margin: 32px 16px;
+	background-color: #f5f5f5;
+	border-radius: 2px;
+	img {
+		display: block;
+		width: 328px;
+		height: 211px;
+		margin:auto;
+		max-width: 100%;
+	}
+	.caption {
+		padding: 16px 16px 6px 16px;
+	}
+	&:hover {
+		box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16);
+	}
+}
+
+.cardimage {
+	img {
+		max-width:100%;
+		border:$defaultMargin solid white;
+	    border-radius: 2px;
+	    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16);
+    }
 }
