--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -8809,58 +8809,63 @@ body {
   font-family: "Roboto";
 }
 
-/* line 20, ../sass/_home.scss */
+/* line 19, ../sass/_home.scss */
 h4, h5, h6 {
   font-family: "Lato";
 }
 
-/* line 25, ../sass/_home.scss */
+/* line 23, ../sass/_home.scss */
+.bengfont {
+  font-family: 'akzidenz-grotesk-condensed', bebas_neueregular, Helvetica Neue, Arial, sans-serif;
+}
+
+/* line 28, ../sass/_home.scss */
 .navbar-brand img {
   height: 22px;
 }
 
-/* line 30, ../sass/_home.scss */
+/* line 33, ../sass/_home.scss */
 .labo-header {
   margin-bottom: 30px;
 }
-/* line 31, ../sass/_home.scss */
+/* line 34, ../sass/_home.scss */
 .labo-header h1 {
   margin: 0px 0px 10px 0px;
 }
 
-/* line 37, ../sass/_home.scss */
+/* line 40, ../sass/_home.scss */
 .home-separator {
   margin: 50px 0px;
 }
 
-/* line 42, ../sass/_home.scss */
+/* line 45, ../sass/_home.scss */
 .home-footer a {
   color: #e00034;
 }
 
-/* line 47, ../sass/_home.scss */
+/* line 50, ../sass/_home.scss */
 .collection-tab {
   padding: 10px;
   height: 100%;
 }
 
-/* line 52, ../sass/_home.scss */
+/* line 55, ../sass/_home.scss */
 .dashboard-header {
   width: 100%;
   text-align: center;
   margin-bottom: 20px;
 }
-/* line 56, ../sass/_home.scss */
+/* line 59, ../sass/_home.scss */
 .dashboard-header h3 {
   width: 30%;
   display: inline;
 }
-/* line 60, ../sass/_home.scss */
+/* line 63, ../sass/_home.scss */
 .dashboard-header img {
   display: inline;
 }
 
-/* line 66, ../sass/_home.scss */
+/* line 69, ../sass/_home.scss */
 .labs-well {
   background-color: white;
   border: 2px solid #009fda;
@@ -8868,27 +8873,27 @@ h4, h5, h6 {
   min-height: 170px;
   text-style: justify;
 }
-/* line 72, ../sass/_home.scss */
+/* line 75, ../sass/_home.scss */
 .labs-well h3 {
   font-family: 'Nothing You Could Do', cursive;
 }
-/* line 75, ../sass/_home.scss */
+/* line 78, ../sass/_home.scss */
 .labs-well.labs-goto {
   cursor: pointer;
   border: 2px solid #e00034;
 }
-/* line 78, ../sass/_home.scss */
+/* line 81, ../sass/_home.scss */
 .labs-well.labs-goto:hover {
   border-color: black;
   background-image: url("/static/images/small-curl.png");
   background-repeat: no-repeat;
   background-position: bottom;
 }
-/* line 79, ../sass/_home.scss */
+/* line 82, ../sass/_home.scss */
 .labs-well.labs-goto:hover h3 {
   color: #e00034;
 }
-/* line 88, ../sass/_home.scss */
+/* line 91, ../sass/_home.scss */
 .labs-well img {
   max-width: 100%;
   border: 10px solid #fff;
@@ -8896,9 +8901,42 @@ h4, h5, h6 {
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16);
 }
 
-/* line 96, ../sass/_home.scss */
+/* line 99, ../sass/_home.scss */
 .interactive {
   cursor: pointer;
+}
+
+/* line 103, ../sass/_home.scss */
+.card {
+  padding: 0;
+  height: 380px;
+  margin: 32px 16px;
+  background-color: #f5f5f5;
+  border-radius: 2px;
+}
+/* line 109, ../sass/_home.scss */
+.card img {
+  display: block;
+  width: 328px;
+  height: 211px;
+  margin: auto;
+  max-width: 100%;
+}
+/* line 116, ../sass/_home.scss */
+.card .caption {
+  padding: 16px 16px 6px 16px;
+}
+/* line 119, ../sass/_home.scss */
+.card:hover {
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16);
+}
+
+/* line 125, ../sass/_home.scss */
+.cardimage img {
+  max-width: 100%;
+  border: 10px solid white;
+  border-radius: 2px;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16);
 }
 
 /* line 1, ../sass/_searchkit.scss */
