--- a/src/templates/recipe.html
+++ b/src/templates/recipe.html
@@ -1,5 +1,5 @@
 <head>
-	<title>L A B O - Packaged Recipes</title>
+	<title>L A B O - Recipe: {{recipe.id}}</title>
 	<link rel="stylesheet" href="/static/css/main.css">
 	<link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/searchkit/0.8.3/theme.css">
 	<link href="/static/css/font-awesome.min.css" rel="stylesheet">
@@ -13,25 +13,15 @@
 
 	<div class="container">
 
-		<div class="row" style="height:50px;">
-
-			<div class="col-md-12">
-				<div role="tabpanel" class="tab-pane collection-tab" id="links">
-
-					<div class="row text-center">
-						<div class="dashboard-header">
-							<h3>Recipe: AVResearcherXL</h3>
-						</div>
-					</div>
-				</div>
+		<div class="row well">
+			<div class="col-md-12"><a href="/recipes">&lt;&lt;&nbsp;Terug</a>
+				&nbsp;|&nbsp;<strong>Recipe: {{recipe.name}}</strong>
 			</div>
 		</div>
-		<div class="row">
 
+		<div class="row">
 			<!-- instead of listing the one recipe, make sure to list a bunch of recipes-->
 			<div id="app" />
-
-
 		</div>
 	</div>
 
@@ -39,6 +29,9 @@
 
 	<script src="/static/js/config.js" type="text/javascript"></script>
 	<script src="/static/public/bundle.js" type="text/javascript"></script>
-	<script src="/static/js/recipes/avresearcherxl-recipe.js" type="text/javascript"></script>
+	<script>
+		clariah.cookRecipe({{ recipe.ingredients|tojson|safe }});
+
+	</script>
 
 </body>
