--- a/src/templates/apis.html
+++ b/src/templates/apis.html
@@ -1,6 +1,5 @@
 <!doctype HTML>
 
-
 <html>
 
 <head>
@@ -18,8 +17,26 @@
 
 <div class="container">
 
-	TODO rebuild this page, by loading in a list of APIs that have a proper Swagger definition.
+	<div class="row">
+		<div class="col-md-offset-3 col-md-6">
+			<h3 class="text-center">Probeer een van onze APIs</h3>
+			<div class="list-group">
+				<a href="http://blofeld.beeldengeluid.nl:5320" target="_searchapi" class="list-group-item">
+					<h4 class="list-group-item-heading">Search API</h4>
+					<p class="list-group-item-text">
+						Enables querying all of the registered datasets that were processed by the CLARIAH importer
+					</p>
+				</a>
+				<a href="http://localhost:5301/" target="_searchapi" class="list-group-item">
+					<h4 class="list-group-item-heading">Annotation API</h4>
+					<p class="list-group-item-text">
+						Enables the storage &amp; retrieval of generic annotations made on any kind of identifiable resource
+					</p>
+				</a>
+			</div>
 
+		</div>
+	</div>
 
 </div>
 
