optimized the packaging, now the webpack only includes some bootstrap scripts. The bootstrap CSS is included via the main.css file, making bootstrap 3 CSS a requirement to include the benglabs.js

--- a/src/templates/annotate-video.html
+++ b/src/templates/annotate-video.html
@@ -170,7 +170,7 @@
 	<script type="text/javascript" src="/static/node_modules/moment/min/moment.min.js"></script>
 
 	<!-- import the labs library -->
-	<script type="text/javascript" src="/static/public/bundle.js"></script>
+	<script type="text/javascript" src="/static/public/assets/benglabs.js"></script>
 
 	<!-- custom imports -->
 	<script type="text/javascript" src="/static/js/config.js"></script>
