--- a/src/templates/apis.html
+++ b/src/templates/apis.html
@@ -24,13 +24,13 @@
 				<a href="http://blofeld.beeldengeluid.nl:5320/#/default" target="_searchapi" class="list-group-item">
 					<h4 class="list-group-item-heading">Search API</h4>
 					<p class="list-group-item-text">
-						Enables querying all of the registered datasets that were processed by the CLARIAH importer
+						Doorzoek alle geregistreerde (linked) datasets die door de importer in het systeem zijn opgenomen
 					</p>
 				</a>
-				<a href="http://blofeld.beeldengeluid.nl:5303/#/default" target="_searchapi" class="list-group-item">
+				<a href="http://blofeld.beeldengeluid.nl:5303/#/default" target="_annotationapi" class="list-group-item">
 					<h4 class="list-group-item-heading">Annotation API</h4>
 					<p class="list-group-item-text">
-						Enables the storage &amp; retrieval of generic annotations made on any kind of identifiable resource
+						Maakt het mogelijk annotaties van eender welk soort bron op te slaan en op te vragen
 					</p>
 				</a>
 			</div>
