--- a/src/templates/recipe.html
+++ b/src/templates/recipe.html
@@ -28,7 +28,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 
 	<script src="/static/js/config.js" type="text/javascript"></script>
-	<script src="/static/public/bundle.js" type="text/javascript"></script>
+	<script src="/static/public/assets/benglabs.js" type="text/javascript"></script>
 	<script>
 		clariah.cookRecipe({{ recipe.ingredients|tojson|safe }}, 'app');
 
