--- a/src/static/sass/main.scss
+++ b/src/static/sass/main.scss
@@ -1,4 +1,4 @@
-@import "compass/css3";
+//@import "compass/css3";
 @import "_bootstrap-overrides.scss";
 @import "../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "_variables.scss";
