--- a/src/templates/annotate-video.html
+++ b/src/templates/annotate-video.html
@@ -10,7 +10,7 @@
 
 <link href="/static/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-<link rel="stylesheet" href="/static/css/main.css">
+<link rel="stylesheet" href="/static/css/main-no-bootstrap.css">
 
 </head>
 
