added a config/plugin flow where it is possible to create a media playlist from search results for the item details pages. Much more

--- a/src/static/css/main-no-bootstrap.css
+++ b/src/static/css/main-no-bootstrap.css
@@ -221,3 +221,8 @@ h4, h5, h6 {
   background-color: black;
   cursor: crosshair;
 }
+
+/* line 12, ../sass/_player.scss */
+.media-player img {
+  max-width: 100%;
+}
