--- a/src/templates/recipe.html
+++ b/src/templates/recipe.html
@@ -1,6 +1,6 @@
 <head>
 	<title>L A B O - Recipe: {{recipe.id}}</title>
-	<link rel="stylesheet" href="/static/css/main-no-bootstrap.css">
+	<link rel="stylesheet" href="/static/css/main.css">
 	<link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/searchkit/0.8.3/theme.css">
 	<link href="/static/css/font-awesome.min.css" rel="stylesheet">
 </head>
