--- a/src/templates/annotate-video.html
+++ b/src/templates/annotate-video.html
@@ -170,6 +170,8 @@
 	<script type="text/javascript" src="/static/node_modules/moment/min/moment.min.js"></script>
 
 	<!-- import the labs library -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js"></script>
 	<script type="text/javascript" src="/static/public/assets/benglabs.js"></script>
 
 	<!-- custom imports -->
