--- a/src/static/sass/_bootstrap-overrides.scss
+++ b/src/static/sass/_bootstrap-overrides.scss
@@ -1,6 +1,7 @@
 /* Override your bootstrap variables here */
 
 $navbar-border-radius : 0px;
+$navbar-margin-bottom: 0px;
 
 /* This is needed for the glyphicons to work */
 
