--- a/src/templates/components.html
+++ b/src/templates/components.html
@@ -1,79 +1,115 @@
 <!doctype HTML>
-
 <html>
 
 <head>
-	<title>L A B O - Components</title>
-	<link rel="stylesheet" href="/static/css/main.css">
-	<link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/searchkit/0.8.3/theme.css">
-	<link href="/static/css/font-awesome.min.css" rel="stylesheet">
+    <title>L A B O - Components</title>
+    <link rel="stylesheet" href="/static/css/components.css">
+    <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/searchkit/0.8.3/theme.css">
+    <link href="/static/css/font-awesome.min.css" rel="stylesheet">
 </head>
-
 
 <body>
 
-{% with page='components' %}
-{% include 'nav.html' %}
-{% endwith %}
+    {% with page='components' %}
+    {% include 'nav.html' %}
+    {% endwith %}
 
-<div class="container">
 
-	<div class="row">
-		<div class="col-md-offset-3 col-md-6">
-			<h3 class="text-center">Dit zijn tot nu toe de componenten die we ontwikkeld hebben</h3>
+        <div class="row affix-row">
+            <div class="col-sm-3 col-md-2 affix-sidebar">
 
-			<!--TOOD elk component in een collapsable zetten -->
-			<!-- The facet search component-->
+                <div class="sidebar-nav">
 
-			<div id="facet_search"></div>
+                    <div class="navbar navbar-default" role="navigation">
 
-			<div id="collection_selector"></div>
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-navbar-collapse">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <span class="visible-xs navbar-brand">Sidebar menu</span>
+                        </div>
 
-		</div>
-	</div>
+                        <div class="navbar-collapse collapse sidebar-navbar-collapse">
+                            <ul class="nav navbar-nav" id="sidenav01">
 
-</div>
+                                <li class="active">
+                                    <a href="#" data-toggle="collapse" data-target="#toggleDemo0" data-parent="#sidenav01" class="collapsed">
+                                        <h4>
+										CLARIAH Components
+										<br>
+										<small>Choose <span class="caret"></span></small>
+										</h4>
+                                    </a>
+                                    <div class="collapse" id="toggleDemo0" style="height: 0px;">
+                                        <ul class="nav nav-list">
+                                            <li><a href="#">ProfileSubMenu1</a></li>
+                                            <li><a href="#">ProfileSubMenu2</a></li>
+                                            <li><a href="#">ProfileSubMenu3</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <a href="#" data-toggle="collapse" data-target="#toggleDemo" data-parent="#sidenav01" class="collapsed">
+                                        <span class="glyphicon glyphicon-cloud"></span>Collection<span class="caret pull-right"></span>
+                                    </a>
+                                    <div class="collapse" id="toggleDemo" style="height: 0px;">
+                                        <ul class="nav nav-list">
+                                            <li><a href="#" onclick="showComponent('collection-selector')">Collection selector</a></li>
+                                            <li><a href="#" onclick="showComponent('collection-stats')">Collection stats</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+
+                                <li class="active">
+                                    <a href="#" data-toggle="collapse" data-target="#toggleDemo2" data-parent="#sidenav01" class="collapsed">
+                                        <span class="glyphicon glyphicon-inbox"></span> Search <span class="caret pull-right"></span>
+                                    </a>
+                                    <div class="collapse" id="toggleDemo2" style="height: 0px;">
+                                        <ul class="nav nav-list">
+                                            <li><a href="#" onclick="showComponent('facet-search')">Facet search</a></li>
+                                            <li><a href="#" onclick="showComponent('search-result')">Search result</a></li>
+                                            <li><a href="#" onclick="showComponent('item-details')">Item details</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li><a href="#"><span class="glyphicon glyphicon-lock"></span> Normalmenu</a></li>
+                                <li><a href="#"><span class="glyphicon glyphicon-calendar"></span> WithBadges <span class="badge pull-right">42</span></a></li>
+                                <li><a href=""><span class="glyphicon glyphicon-cog"></span> PreferencesMenu</a></li>
+                            </ul>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="col-sm-9 col-md-10 affix-content">
+                <div class="container">
+                    <div class="page-header">
+                        <h3><span class="glyphicon glyphicon-th-list"></span> Navigation</h3>
+                    </div>
+                   	<div id="component_x">
+
+                   	</div>
+                </div>
+            </div>
+
+        </div>
 
 </body>
 
-	<script src="/static/js/config.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js"></script>
 
-	<!-- stupid d3 import -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+<script src="/static/js/config.js"></script>
+<script src="/static/public/assets/benglabs.js"></script>
+<script type="text/babel" src="/static/js/labo-components.js"></script>
 
-	<!-- import react -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js"></script>
-
-
-    <script src="/static/public/assets/benglabs.js"></script>
-	<script type="text/babel">
-
-		var FacetSearchComponent = clariah.FacetSearchComponent;
-		var CollectionSelector = clariah.CollectionSelector;
-		var NISVCatalogueConfig = clariah.NISVCatalogueConfig;
-
-		//render the collection selector
-		ReactDOM.render(
-			<CollectionSelector/>,
-			document.getElementById('collection_selector')
-		)
-
-		//render the facet search component
-		ReactDOM.render(
-			<div>
-				<FacetSearchComponent
-					key="testbox"
-					blockId="labs-catalogue-aggr"
-					searchAPI={_config.SEARCH_API_BASE}
-					indexPath={'/search/labs-catalogue-aggr'}
-					prefixQueryFields={NISVCatalogueConfig.prefixQueryFields}
-					dateFields={NISVCatalogueConfig.dateFields}
-					facets={NISVCatalogueConfig.facets}/>
-			</div>
-			, document.getElementById('facet_search')
-		)
-
-	</script>
 </html>
