--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -17,13 +17,10 @@
 
 <div class="container">
 
-	<header class="labo-header">
 
-		<h1 class="text-center">
-			<img src="/static/images/small-curl.png">&nbsp;&nbsp;Contact&nbsp;&nbsp;<img src="/static/images/small-curl.png"><br>
-
-		</h1>
-	</header>
+	<div class="row text-center">
+		<h3>Contact</h3>
+	</div>
 
 	<div class="row">
 
