--- a/src/static/sass/components.scss
+++ b/src/static/sass/components.scss
@@ -2,4 +2,5 @@
 @import "../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "_variables.scss";
 @import "_home.scss";
+@import "_searchkit.scss";
 @import "_bootstrap-vertical-nav.scss";
