misc fixes/comments

--- a/src/templates/components.html
+++ b/src/templates/components.html
@@ -56,7 +56,7 @@
                                     <a href="#" data-toggle="collapse" data-target="#menu_collection" data-parent="#component_menu" class="collapsed">
                                         <span class="glyphicon glyphicon-cloud"></span>Collection<span class="caret pull-right"></span>
                                     </a>
-                                    <div class="collapse" id="menu_collection" style="height: 0px;">
+                                    <div class="collapse in" id="menu_collection">
                                         <ul class="nav nav-list">
                                             <li><a href="#" onclick="showComponent('collection-selector')">Collection selector</a></li>
                                             <li><a href="#" onclick="showComponent('collection-stats')">Collection stats</a></li>
@@ -68,7 +68,7 @@
                                     <a href="#" data-toggle="collapse" data-target="#menu_search" data-parent="#component_menu" class="collapsed">
                                         <span class="glyphicon glyphicon-inbox"></span> Search <span class="caret pull-right"></span>
                                     </a>
-                                    <div class="collapse" id="menu_search" style="height: 0px;">
+                                    <div class="collapse in" id="menu_search">
                                         <ul class="nav nav-list">
                                             <li><a href="#" onclick="showComponent('facet-search')">Facet search</a></li>
                                             <li><a href="#" onclick="showComponent('search-result')">Search result</a></li>
