--- a/src/templates/annotate-video.html
+++ b/src/templates/annotate-video.html
@@ -170,6 +170,7 @@
 	<script type="text/javascript" src="/static/node_modules/moment/min/moment.min.js"></script>
 
 	<!-- import the labs library -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js"></script>
 	<script type="text/javascript" src="/static/public/assets/benglabs.js"></script>
@@ -178,15 +179,8 @@
 	<script type="text/javascript" src="/static/js/config.js"></script>
 
 	<script type="text/javascript" src="/static/js/playout/froogaloop.js"></script>
-	<script type="text/javascript" src="/static/js/playout/vimeo-player.js"></script>
 
-
-	<script type="text/javascript" src="/static/js/annotation/player-controls.js"></script>
-	<script type="text/javascript">
-		clariah.renderAnnotationBox('annotation_box');
-		clariah.renderSegmentationControls('segmentation_controls');
-	</script>
-
+	<script type="text/babel" src="/static/js/annotation/player-controls.js"></script>
 </body>
 
 </html>
