mostly working video annotation recipe. Now there are two types of recipes: search & annotation

--- a/src/templates/annotate-video.html
+++ b/src/templates/annotate-video.html
@@ -180,7 +180,8 @@
 
 	<script type="text/javascript" src="/static/js/playout/froogaloop.js"></script>
 
-	<script type="text/babel" src="/static/js/annotation/player-controls.js"></script>
+	<script type="text/babel" src="/static/js/annotation/labo-video-annotation.js"></script>
+	<script type="text/javascript" src="/static/js/annotation/player-controls.js"></script>
 </body>
 
 </html>
