--- a/src/templates/recipe.html
+++ b/src/templates/recipe.html
@@ -27,12 +27,14 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 
+	<script type="text/javascript" src="/static/js/playout/froogaloop.js"></script>
+
 	<script src="/static/js/config.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js"></script>
 	<script src="/static/public/assets/benglabs.js" type="text/javascript"></script>
 	<script>
-		clariah.cookRecipe({{ recipe.ingredients|tojson|safe }}, 'app');
+		clariah.cookRecipe({{ recipe|tojson|safe }}, 'app');
 
 	</script>
 
