removed the annotation from the menu, cleaned up the index.html a bit. Changed the order of the menu too

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,25 +16,12 @@
 {% endwith %}
 
 <div class="container">
-
+	<br>
 	<h1 class="text-center">
-		Welcome to L A B O
+		Welcome to L A B O<br>
 		<small>We've put up some things for you to try</small>
 	</h1>
-
-	<div class="row">
-		<div id="3" class="col-sm-6 col-md-4">
-			<div class="well labs-well labs-goto" onclick="gotoPage('components')">
-				<h3><i class="fa fa-video-camera"></i>&nbsp;Functionalities</h3>
-				Check out our useful components
-			</div>
-		</div>
-		<div class="col-sm-6 col-md-8">
-			<div class="well labs-well">
-				In LABO each functionality for the end-user is available in the form of a UI component, check out the components page to see what we have to offer.
-			</div>
-		</div>
-	</div>
+	<br>
 
 	<div class="row">
 		<div id="3" class="col-sm-6 col-md-4 card-wrapper">
@@ -52,6 +39,20 @@
 	</div>
 
 	<div class="row">
+		<div id="3" class="col-sm-6 col-md-4">
+			<div class="well labs-well labs-goto" onclick="gotoPage('components')">
+				<h3><i class="fa fa-video-camera"></i>&nbsp;Functionalities</h3>
+				Check out our useful components
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-8">
+			<div class="well labs-well">
+				In LABO each functionality for the end-user is available in the form of a UI component, check out the components page to see what we have to offer.
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
 		<div id="2" class="col-sm-6 col-md-4">
 			<div class="well labs-well labs-goto" onclick="gotoPage('apis')">
 				<h3><i class="fa fa-plug"></i></span>&nbsp;Try out different APIs</h3>
@@ -63,38 +64,6 @@
 				We're implementing several services that do stuff with our catalogue or can process different kinds of data. Each of these services have APIs which you can try out here. So far we have search, entity extraction and speech recogntion. We plan to have many more APIs in the near future, also exposing services for face recognition and recommendation software.
 			</div>
 		</div>
-	</div>
-
-	<div class="row">
-
-		<div id="1" class="col-sm-6 col-md-4">
-			<div class="well labs-well labs-goto" onclick="gotoPage('recipe/beng-catalogue-search')">
-				<h3><i class="fa fa-search"></i>&nbsp;Search our catalogue</h3>
-				Try out our general purpose search interface, to get to grips with our collection
-			</div>
-		</div>
-		<div class="col-sm-6 col-md-8">
-			<div class="well labs-well">
-				By harvesting our OAI-PMH provider we've implemented an example search engine based on ElasticSearch. We consider this search engine to be useful for exploring our collection in a general sense. If you require more specific search strategies, we've documented the current approach.
-			</div>
-		</div>
-
-	</div>
-
-	<div class="row">
-
-		<div id="5" class="col-sm-6 col-md-4">
-			<div class="well labs-well labs-goto" onclick="gotoPage('annotatevideo')">
-				<h3><i class="fa fa-search"></i>&nbsp;Annotate</h3>
-				Annotate audiovisual content
-			</div>
-		</div>
-		<div class="col-sm-6 col-md-8">
-			<div class="well labs-well">
-				We've just begun implementing one of the functionalites related to the annotation of audiovisual resources
-			</div>
-		</div>
-
 	</div>
 
 	<h1 class="text-center">
