Register new collection analyser component

--- a/src/templates/components.html
+++ b/src/templates/components.html
@@ -59,6 +59,7 @@
                                         <ul class="nav nav-list">
                                             <li><a href="#" onclick="showComponent('collection-selector')">Collection selector</a></li>
                                             <li><a href="#" onclick="showComponent('collection-stats')">Collection stats</a></li>
+                                            <li><a href="#" onclick="showComponent('collection-analyser')">Collection analyser</a></li>
                                         </ul>
                                     </div>
                                 </li>
