header title now shows the selected component

--- a/src/templates/components.html
+++ b/src/templates/components.html
@@ -57,9 +57,9 @@
                                     </a>
                                     <div class="collapse in" id="menu_collection">
                                         <ul class="nav nav-list">
-                                            <li><a href="#" onclick="showComponent('collection-selector')">Collection selector</a></li>
-                                            <li><a href="#" onclick="showComponent('collection-stats')">Collection stats</a></li>
-                                            <li><a href="#" onclick="showComponent('collection-analyser')">Collection analyser</a></li>
+                                            <li><a href="#" onclick="showComponent('Collection analyser')">Collection analyser</a></li>
+                                            <li><a href="#" onclick="showComponent('Collection selector')">Collection selector</a></li>
+                                            <li><a href="#" onclick="showComponent('Collection stats')">Collection stats</a></li>
                                         </ul>
                                     </div>
                                 </li>
@@ -71,7 +71,7 @@
                                     </a>
                                     <div class="collapse in" id="menu_search">
                                         <ul class="nav nav-list">
-                                            <li><a href="#" onclick="showComponent('facet-search')">Facet search</a></li>
+                                            <li><a href="#" onclick="showComponent('Facet search')">Facet search</a></li>
                                         </ul>
                                     </div>
                                 </li>
@@ -83,7 +83,7 @@
                                     </a>
                                     <div class="collapse in" id="menu_stats">
                                         <ul class="nav nav-list">
-                                            <li><a href="#" onclick="showComponent('line-chart')">Line chart</a></li>
+                                            <li><a href="#" onclick="showComponent('Line chart')">Line chart</a></li>
                                         </ul>
                                     </div>
                                 </li>
@@ -103,13 +103,8 @@
             </div>
 
             <div class="col-sm-9 col-md-10 affix-content">
-                <div class="container">
-                    <div class="page-header">
-                        <h3><span class="glyphicon glyphicon-tasks"></span> Try the component</h3>
-                    </div>
-                   	<div id="component_x">
+                <div id="component_x">
 
-                   	</div>
                 </div>
             </div>
 
