removed the stupid curly things from the index.html

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -67,7 +67,7 @@
 	</div>
 
 	<h1 class="text-center">
-		<img src="/static/images/small-curl.png">&nbsp;&nbsp;Want to know more?&nbsp;&nbsp;<img src="/static/images/small-curl.png">
+		Want to know more?
 		<br><small>Please have a look at the following links</small>
 	</h1>
 
