--- a/src/templates/recipe.html
+++ b/src/templates/recipe.html
@@ -32,7 +32,7 @@
 	<script src="/static/js/config.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js"></script>
-	<script src="/static/public/assets/benglabs.js" type="text/javascript"></script>
+	<script src="/static/public/assets/benglabs.min.js" type="text/javascript"></script>
 	<script>
 		clariah.cookRecipe({{ recipe|tojson|safe }}, 'app');
 
