--- a/src/static/css/main-no-bootstrap.css
+++ b/src/static/css/main-no-bootstrap.css
@@ -183,6 +183,76 @@ h4, h5, h6 {
   stroke-width: 1.5px;
 }
 
+/* line 56, ../sass/_searchkit.scss */
+.tag {
+  font-size: 100% !important;
+}
+
+/* For the autocomplete stuff */
+/* line 62, ../sass/_searchkit.scss */
+.app-container {
+  display: flex;
+}
+
+/* line 66, ../sass/_searchkit.scss */
+.react-autosuggest__container {
+  position: relative;
+}
+
+/* line 70, ../sass/_searchkit.scss */
+.react-autosuggest__input {
+  width: 440px;
+  height: 30px;
+  padding: 10px 20px;
+  font-family: Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  border: 1px solid #aaa;
+  border-radius: 4px;
+}
+
+/* line 81, ../sass/_searchkit.scss */
+.react-autosuggest__input:focus {
+  outline: none;
+}
+
+/* line 85, ../sass/_searchkit.scss */
+.react-autosuggest__container--open .react-autosuggest__input {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+/* line 90, ../sass/_searchkit.scss */
+.react-autosuggest__suggestions-container {
+  position: absolute;
+  top: 51px;
+  width: 440px;
+  height: 400px;
+  overflow: auto;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  border: 1px solid #aaa;
+  background-color: #fff;
+  font-family: Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  z-index: 2;
+}
+
+/* line 109, ../sass/_searchkit.scss */
+.react-autosuggest__suggestion {
+  cursor: pointer;
+  padding: 10px 20px;
+}
+
+/* line 114, ../sass/_searchkit.scss */
+.react-autosuggest__suggestion--focused {
+  background-color: #ddd;
+}
+
 /* line 1, ../sass/_player.scss */
 #timebar {
   width: 100%;
