--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -3,8 +3,8 @@
 /* This is needed for the glyphicons to work */
 /* Further overrides */
 /*!
- * Bootstrap v3.3.6 (http://getbootstrap.com)
- * Copyright 2011-2015 Twitter, Inc.
+ * Bootstrap v3.3.7 (http://getbootstrap.com)
+ * Copyright 2011-2016 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
@@ -1751,7 +1751,6 @@ a:hover, a:focus {
 }
 /* line 58, ../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/_scaffolding.scss */
 a:focus {
-  outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
@@ -3805,7 +3804,6 @@ select[size] {
 input[type="file"]:focus,
 input[type="radio"]:focus,
 input[type="checkbox"]:focus {
-  outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
@@ -4443,7 +4441,6 @@ select[multiple].input-lg,
 }
 /* line 26, ../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/_buttons.scss */
 .btn:focus, .btn.focus, .btn:active:focus, .btn:active.focus, .btn.active:focus, .btn.active.focus {
-  outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
@@ -8977,6 +8974,76 @@ h4, h5, h6 {
   fill: none;
   stroke: steelblue;
   stroke-width: 1.5px;
+}
+
+/* line 56, ../sass/_searchkit.scss */
+.tag {
+  font-size: 100% !important;
+}
+
+/* For the autocomplete stuff */
+/* line 62, ../sass/_searchkit.scss */
+.app-container {
+  display: flex;
+}
+
+/* line 66, ../sass/_searchkit.scss */
+.react-autosuggest__container {
+  position: relative;
+}
+
+/* line 70, ../sass/_searchkit.scss */
+.react-autosuggest__input {
+  width: 440px;
+  height: 30px;
+  padding: 10px 20px;
+  font-family: Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  border: 1px solid #aaa;
+  border-radius: 4px;
+}
+
+/* line 81, ../sass/_searchkit.scss */
+.react-autosuggest__input:focus {
+  outline: none;
+}
+
+/* line 85, ../sass/_searchkit.scss */
+.react-autosuggest__container--open .react-autosuggest__input {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+/* line 90, ../sass/_searchkit.scss */
+.react-autosuggest__suggestions-container {
+  position: absolute;
+  top: 51px;
+  width: 440px;
+  height: 400px;
+  overflow: auto;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  border: 1px solid #aaa;
+  background-color: #fff;
+  font-family: Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  z-index: 2;
+}
+
+/* line 109, ../sass/_searchkit.scss */
+.react-autosuggest__suggestion {
+  cursor: pointer;
+  padding: 10px 20px;
+}
+
+/* line 114, ../sass/_searchkit.scss */
+.react-autosuggest__suggestion--focused {
+  background-color: #ddd;
 }
 
 /* line 1, ../sass/_player.scss */
