made the classify form a bit more pretty

--- a/src/static/css/components.css
+++ b/src/static/css/components.css
@@ -8994,7 +8994,7 @@ h4, h5, h6 {
 
 /* line 70, ../sass/_searchkit.scss */
 .react-autosuggest__input {
-  width: 440px;
+  width: 90%;
   height: 30px;
   padding: 10px 20px;
   font-family: Helvetica, sans-serif;
@@ -9019,7 +9019,7 @@ h4, h5, h6 {
 .react-autosuggest__suggestions-container {
   position: absolute;
   top: 51px;
-  width: 440px;
+  width: 90%;
   height: 400px;
   overflow: auto;
   margin: 0;
