--- a/src/static/sass/_searchkit.scss
+++ b/src/static/sass/_searchkit.scss
@@ -68,7 +68,7 @@
 }
 
 .react-autosuggest__input {
-	width: 440px;
+	width: 90%;
 	height: 30px;
 	padding: 10px 20px;
 	font-family: Helvetica, sans-serif;
@@ -90,8 +90,8 @@
 .react-autosuggest__suggestions-container {
 	position: absolute;
 	top: 51px;
-	width: 440px;
-	height: 400px;
+	width: 90%;
+	height: 420px;
 	overflow:auto;
 	margin: 0;
 	padding: 0;
